
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct archive_entry {int dummy; } ;
struct archive {int dummy; } ;
typedef scalar_t__ int64_t ;


 scalar_t__ AE_IFDIR ;
 int AE_IFLNK ;
 int AE_IFREG ;
 int ARCHIVE_EOF ;
 int ARCHIVE_OK ;
 scalar_t__ archive_entry_filetype (struct archive_entry*) ;
 int archive_entry_free (struct archive_entry*) ;
 struct archive_entry* archive_entry_new () ;
 int archive_entry_pathname (struct archive_entry*) ;
 int archive_entry_size (struct archive_entry*) ;
 int archive_read_data_block (struct archive*,void const**,size_t*,scalar_t__*) ;
 int archive_read_disk_descend (struct archive*) ;
 struct archive* archive_read_disk_new () ;
 int archive_read_disk_open (struct archive*,char*) ;
 int archive_read_disk_set_symlink_logical (struct archive*) ;
 int archive_read_free (struct archive*) ;
 int archive_read_next_header2 (struct archive*,struct archive_entry*) ;
 int assert (int ) ;
 int assertChdir (char*) ;
 int assertEqualInt (int,int) ;
 int assertEqualIntA (struct archive*,int,int) ;
 int assertEqualMem (void const*,char*,int) ;
 int assertMakeDir (char*,int) ;
 int assertMakeFile (char*,int,char*) ;
 int assertMakeSymlink (char*,char*,int) ;
 int canSymlink () ;
 int skipping (char*) ;
 scalar_t__ strcmp (int ,char*) ;

__attribute__((used)) static void
test_symlink_logical_loop(void)
{
 struct archive *a;
 struct archive_entry *ae;
 const void *p;
 size_t size;
 int64_t offset;
 int file_count;

 if (!canSymlink()) {
  skipping("Can't test symlinks on this filesystem");
  return;
 }




 assertMakeDir("l2", 0755);
 assertChdir("l2");
 assertMakeDir("d1", 0755);
 assertMakeDir("d1/d2", 0755);
 assertMakeDir("d1/d2/d3", 0755);
 assertMakeDir("d2", 0755);
 assertMakeFile("d2/file1", 0644, "d2/file1");
 assertMakeSymlink("d1/d2/ld1", "../../d1", 1);
 assertMakeSymlink("d1/d2/ld2", "../../d2", 1);
 assertChdir("..");

 assert((ae = archive_entry_new()) != ((void*)0));
 assert((a = archive_read_disk_new()) != ((void*)0));
 assertEqualIntA(a, ARCHIVE_OK,
     archive_read_disk_set_symlink_logical(a));




 assertEqualIntA(a, ARCHIVE_OK, archive_read_disk_open(a, "l2/d1"));
 file_count = 6;

 while (file_count--) {
  assertEqualIntA(a, ARCHIVE_OK, archive_read_next_header2(a, ae));
  if (strcmp(archive_entry_pathname(ae), "l2/d1") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFDIR);
  } else if (strcmp(archive_entry_pathname(ae), "l2/d1/d2") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFDIR);
  } else if (strcmp(archive_entry_pathname(ae), "l2/d1/d2/d3") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFDIR);
  } else if (strcmp(archive_entry_pathname(ae), "l2/d1/d2/ld1") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFLNK);
  } else if (strcmp(archive_entry_pathname(ae), "l2/d1/d2/ld2") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFDIR);
  } else if (strcmp(archive_entry_pathname(ae),
      "l2/d1/d2/ld2/file1") == 0) {
   assertEqualInt(archive_entry_filetype(ae), AE_IFREG);
   assertEqualInt(archive_entry_size(ae), 8);
   assertEqualIntA(a, ARCHIVE_OK,
       archive_read_data_block(a, &p, &size, &offset));
   assertEqualInt((int)size, 8);
   assertEqualInt((int)offset, 0);
   assertEqualMem(p, "d2/file1", 8);
   assertEqualInt(ARCHIVE_EOF,
       archive_read_data_block(a, &p, &size, &offset));
   assertEqualInt((int)size, 0);
   assertEqualInt((int)offset, 8);
  }
  if (archive_entry_filetype(ae) == AE_IFDIR) {

   assertEqualIntA(a, ARCHIVE_OK,
       archive_read_disk_descend(a));
  }
 }

 assertEqualIntA(a, ARCHIVE_EOF, archive_read_next_header2(a, ae));

 assertEqualInt(ARCHIVE_OK, archive_read_free(a));
 archive_entry_free(ae);
}
